// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultPage 404 1`] = `
<div class="ui-example-child ui-example-child-result-page ui-example-child-result-page-0">
  <div class="ui-result">
    <div class="ui-result-image"><img src="//manhattan.didistatic.com/static/manhattan/mand-mobile/result-page/2.1/lost.png" class="lost"></div>
    <!---->
    <div class="ui-result-subtext">您要访问的页面已丢失</div>
    <!---->
  </div>
</div>
`;

exports[`ResultPage Custom pattern 1`] = `
<div class="ui-example-child ui-example-child-result-page ui-example-child-result-page-3">
  <div class="ui-result customized">
    <div class="ui-result-image"><img src="//manhattan.didistatic.com/static/manhattan/do1_JX7bcfXqLpStKRv31xlp"></div>
    <div class="ui-result-text">不太确定自己错在了哪里...</div>
    <div class="ui-result-subtext">要不然刷新试试？</div>
    <!---->
  </div>
</div>
`;

exports[`ResultPage Network anomaly 1`] = `
<div class="ui-example-child ui-example-child-result-page ui-example-child-result-page-1">
  <div class="ui-result">
    <div class="ui-result-image"><img src="//manhattan.didistatic.com/static/manhattan/mand-mobile/result-page/2.1/network.png" class="network"></div>
    <div class="ui-result-text">网络连接异常</div>
    <div class="ui-result-subtext">点击屏幕，重新加载</div>
    <!---->
  </div>
</div>
`;

exports[`ResultPage With button 1`] = `
<div class="ui-example-child ui-example-child-result-page ui-example-child-result-page-2">
  <div class="ui-result">
    <div class="ui-result-image"><img src="//manhattan.didistatic.com/static/manhattan/mand-mobile/result-page/2.1/empty.png" class="empty"></div>
    <div class="ui-result-text">暂无信息</div>
    <!---->
    <div class="ui-result-buttons"><button type="button" class="ui-button default active inline plain small">
        <div class="ui-button-inner">
          <!---->
          <div class="ui-button-content">
            普通按钮
          </div>
        </div>
      </button><button type="button" class="ui-button primary active inline plain small">
        <div class="ui-button-inner">
          <!---->
          <div class="ui-button-content">
            高亮按钮
          </div>
        </div>
      </button></div>
  </div>
</div>
`;
